# bs

grp17/: CMakeLists.txt
grp17/OSMPLib/: OSMPLib.c  OSMPLib.h
grp17/OSMPRun/: OSMPRun.c  OSMPRun.h
grp17/temp_files/: Checkliste.md  debug_script.py  tests  überarbeitete Tests
grp17/tests/: Barrier.c  BarrierReInit.c  Bcast.c  Bcast_vom_Prof.c  FinalizeAndReinit.c  ISendRecv.c  No_init.c  Onlysend.c  SendIrecv_vom_Prof.c  SendRecv.c  SendRecvTooManyMessages.c  SendRecv_vom_Prof.c  Wait_for_max_msg.c  all_send_to_proc_0.c  check_blocking_functions.c  send_recv_different_datatypes.c
grp17/tests/Error_handling_OSMPLib/: error_handling_OSMPLib.c  error_handling_OSMPLib.h
